--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,22 +1,16 @@
 main:
+  - title: "Tracing Everyday AI Literacy Discussions at Scale: How Online Creative Communities Make Sense of Generative AI"
+    authors: <u>Haidan Liu</u>, Poorvi Bhatia, Nicholas Vincent, Parmit K Chilana
+    # conference_short: CHI 2026
+    conference: CHI 2026 (Conditionally Accepted)
+    # pdf: https://arxiv.org/pdf/2306.00988.pdf
+    #code: https://github.com/MrGiovanni/ContinualLearning
+    #bibtex: https://bib.yliu.me/MICCAI23.txt
+    image: ./assets/img/reddit.png
 
-  - title: Continual Learning for Abdominal Multi-Organ and Tumor Segmentation
-    authors: Yixiao Zhang, Xinyi Li, Huimiao Chen, Alan Yuille, <strong>Yaoyao Liu*</strong>, Zongwei Zhou* (*Corresponding authors)
-    conference_short: MICCAI
-    conference: International Conference on Medical Image Computing and Computer-Assisted Intervention <strong>(MICCAI)</strong>, 2023.
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
-    code: https://github.com/MrGiovanni/ContinualLearning
-    bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/teaser_example_2.png
-    notes: Early Accept
-
-  - title: "Mnemonics Training: Multi-Class Incremental Learning without Forgetting"
-    authors: <strong>Yaoyao Liu</strong>, Yuting Su, An-An Liu, Bernt Schiele, Qianru Sun
-    conference_short: CVPR
-    conference: IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2020.
-    pdf: https://arxiv.org/pdf/2002.10211.pdf
-    code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
-    page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
-    notes: Oral Presentation
-    image: ./assets/img/teaser_example.png
+  - title: "Exploring Data Detective Practices as a Class Activity"
+    authors: Ruishan Wu, Zezhong Wang, <u>Haidan Liu</u>, Krithika Balasubramanyam, Kanak Gautam, Aham Gupta, Shannon McAllister, Sheelagh Carpendale
+    conference: Nightingale 2025
+    # pdf: https://arxiv.org/pdf/2405.12345.pdf
+    # bibtex: https://bib.yliu.me/ICER24.txt
+    image: ./assets/img/dataDetective.webp
